# mtrace

./: CMakeLists.txt  README.md  chrono.h  example.cc  malloc_chrono.h  malloc_counter.h  malloc_printer.h  mtrace.h  tsc_chrono.h
tests/: CMakeLists.txt  mtrace.cc
